gcc/testsuite/rust/rustc/ui/index-bot.rs
fn main() {
    (return)[0]; // { dg-error ".E0608." "" { target *-*-* } }
}

